# ML-DL-Training

./: .gitignore  README.md  conda_env.txt
AAS/: MyAASXPackage.aasx  Read_AASX.ipynb  data.json  json_test.ipynb  opcua_test.py  output.json  test.ipynb  test.py  test2.ipynb
AAS/aasx_file/: Injection_Molding_Machine.aasx
API/: GPT_Whisper_api.ipynb  server.js  test.js  test.py
Application/: App copy.py  App.py  information.txt  json_struct.py  json_to_csv.py  mongo.py  test.py  test.ui  tkinter_demo.py  tree_view.py
Application/mongodb/: mongo.py
Base_Learning/Classification/: KNN.ipynb
Classification/: iris_classification.ipynb
Competition/RSP/: RSP.ipynb
Competition/TrainAI/: model.ipynb  test.ipynb
Competition/TrainAI/data/: answer_sample.csv
Data_preprocess/: Dic_file.ipynb
Data_preprocess/workspace/: CDD_data_extract.ipynb  CDD_property_conversion.ipynb  Data_conv.ipynb  data_extract_demo.ipynb  data_verify.ipynb  docx_load.ipynb  eCl@ss_data_extract copy.ipynb  eCl@ss_data_extract.ipynb  model.ipynb  morpheme_analsys.ipynb  test.ipynb  test2.ipynb  참조모델데이터추출.ipynb
Fish/: BreamAndSmelt.ipynb
GAN/Mask_Image/: GAN_DCGAN.ipynb
NLP/: TF_IDF_이해와_유사도_계산의.ipynb
Recommendation_System/: Collaborative Filtering.ipynb  Content Based Filtering.ipynb  TMDB_컨텐츠_기반_영화_추천.ipynb
Regression/: LinearRegression.ipynb
SSAM/ESMF SDK/: ESMF test.py  pyproject.toml
Spark/: spark_2.ipynb  spark_실습1.ipynb
Vision/: vision_test.py
Vision/GAN/Mask_Image/: SAGAN.ipynb
Vision/OpenCV/: face_color_detection.ipynb  face_detection.ipynb  opencv_test.ipynb
(+43 files in other folders)
